--- a/pim-web/src/main/webapp/WEB-INF/web.xml
+++ b/pim-web/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,56 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
+    <servlet>
+        <servlet-name>springDispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- springmvc配置文件默认的名字 <servlet-name>-servlet.xml  如：springDispatcher-servlet.xml  -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath*:/mvc/spring-mvc.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup><!-- 服务器启动时初始化 DispatcherServlet  -->
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>springDispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <!-- 解决springMvc的post乱码 -->
+    <filter>
+        <filter-name>encoding-filter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>encoding-filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 
+    <!-- 配置适配器spring -->
+    <listener>
+        <description>启动spring容器</description>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:applicationContext.xml</param-value>
+    </context-param>
+
+    <!-- session配置  设置session会话的超时时间 -->
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
 </web-app>
         
