--- a/pom.xml
+++ b/pom.xml
@@ -17,97 +17,17 @@
 
     <!-- 属性定义 -->
     <properties>
-        <jdk.version>1.8</jdk.version>
         <junit.version>4.11</junit.version>
-        <!-- 日志 -->
-        <dom4j.version>1.6</dom4j.version>
-        <log4j.version>1.2.17</log4j.version>
-        <slf4j.version>1.7.7</slf4j.version>
-        <slf4j-api.version>1.7.7</slf4j-api.version>
         <!-- spring config -->
         <spring.version>4.3.2.RELEASE</spring.version>
-        <spring.session>1.2.2.RELEASE</spring.session>
-        <!-- 缓存 redis-->
-        <jedis.version>2.8.1</jedis.version>
-        <spring-data-redis.version>1.7.2.RELEASE</spring-data-redis.version>
-        <!-- 权限管理 shiro-->
-        <shiro.version>1.3.2</shiro.version>
-        <!-- activiti工作流 -->
-        <activiti.version>5.14</activiti.version>
         <!-- mybatis-->
         <mybatis.version>3.2.8</mybatis.version>
-        <!--<mybatis-plus.version>2.0.7</mybatis-plus.version>-->
         <mybatis-plus.version>2.2.0</mybatis-plus.version>
         <mybatis-spring.version>1.3.0</mybatis-spring.version>
-        <!-- 分页pagehelper -->
-        <pagehelper.version>4.1.1</pagehelper.version>
-        <!-- druid -->
-        <druid.version>1.0.21</druid.version>
-        <!-- freemarker -->
-        <freemarker.version>2.3.22</freemarker.version>
         <!-- json处理 fastjson  -->
         <fastjson.version>1.2.13</fastjson.version>
-        <!-- sitemesh3  -->
-        <sitemesh.version>3.0.0</sitemesh.version>
-        <sysmphony.sitemesh.version>2.4.2</sysmphony.sitemesh.version>
-        <!-- Apache CXF -->
-        <cxf.version>3.1.4</cxf.version>
-        <!--axis2 -->
-        <axis2.version>1.6.3</axis2.version>
-        <!-- poi -->
-        <poi.version>3.9</poi.version>
-        <ooxml-schemas.version>1.1</ooxml-schemas.version>
-        <jxls.version>1.0.6</jxls.version>
-        <!-- jdom -->
-        <jdom.version>1.1</jdom.version>
-        <jstl.version>1.2</jstl.version>
-        <servlet-api.version>2.5</servlet-api.version>
-        <jsp-api.version>2.1</jsp-api.version>
-        <ant.version>1.6.5</ant.version>
-        <aspectjweaver.version>1.8.2</aspectjweaver.version>
-        <jcl-over-slf4j.version>1.7.7</jcl-over-slf4j.version>
-        <logback.version>1.1.7</logback.version>
-        <jxl.version>2.6.12</jxl.version>
-        <jackson.version>1.9.13</jackson.version>
-        <fasterxml.version>2.4.2</fasterxml.version>
-        <javax.persistence.version>2.1.0</javax.persistence.version>
-
-        <!-- commons包 -->
-        <commons-lang.version>2.6</commons-lang.version>
-        <commons-lang3.version>3.3.2</commons-lang3.version>
-        <commons-pool.version>2.2</commons-pool.version>
-        <commons-collections.version>4.0</commons-collections.version>
-        <commons-io.version>2.4</commons-io.version>
-        <commons-codec.version>1.9</commons-codec.version>
-        <commons-fileupload.version>1.3.1</commons-fileupload.version>
-        <commons-configuration.version>1.10</commons-configuration.version>
-
-        <!--<quartz.version>2.2.1</quartz.version>-->
-        <!-- maven插件 -->
-        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-        <maven-war-plugin.version>2.4</maven-war-plugin.version>
-        <maven-javadoc-plugin.version>2.9</maven-javadoc-plugin.version>
-        <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
-        <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-        <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
-
-        <tomcat.version>2.2</tomcat.version>
-        <webserver.port>8080</webserver.port>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-        <!-- oracle驱动属性 -->
-        <jdbc.driver.groupId>com.oracle</jdbc.driver.groupId>
-        <jdbc.driver.artifactId>ojdbc14</jdbc.driver.artifactId>
-        <jdbc.driver.version>10.2.0.3</jdbc.driver.version>
+        <!-- mysql驱动 -->
         <mysql-connector-java.version>5.1.32</mysql-connector-java.version>
-
-        <proguard.version>4.11</proguard.version>
-        <fluent-hc.version>4.4.1</fluent-hc.version>
-        <guava.version>18.0</guava.version>
-        <httpclient.version>4.3.4</httpclient.version>
-        <!-- TODO 后续增加其他依赖包属性-->
-
-        <pinyin4j>2.5.0</pinyin4j>
     </properties>
 
 
