--- a/pim-web/pom.xml
+++ b/pim-web/pom.xml
@@ -45,17 +45,19 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>${servlet-api.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <version>${jsp-api.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.0</version>
+            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 
@@ -70,7 +72,6 @@
                     <path>/pim</path>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
