--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,17 @@
         <spring.version>4.3.2.RELEASE</spring.version>
         <!-- mybatis-->
         <mybatis.version>3.2.8</mybatis.version>
+        <!--<mybatis-plus.version>2.0.7</mybatis-plus.version>-->
         <mybatis-plus.version>2.2.0</mybatis-plus.version>
         <mybatis-spring.version>1.3.0</mybatis-spring.version>
+        <!-- druid -->
+        <druid.version>1.0.21</druid.version>
         <!-- json处理 fastjson  -->
         <fastjson.version>1.2.13</fastjson.version>
         <!-- mysql驱动 -->
         <mysql-connector-java.version>5.1.32</mysql-connector-java.version>
+        <!--后台返回数据变成json-->
+        <gson.version>2.8.0</gson.version>
     </properties>
 
 
